Bug 236679 - "B" keyboard shortcut does not work (break shared axis box)
Summary: "B" keyboard shortcut does not work (break shared axis box)
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: 2.0.0
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-07 12:18 UTC by Nicolas Brisset
Modified: 2010-11-12 10:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Brisset 2010-05-07 12:18:59 UTC
Version:           2.0.0_devel (using unspecified)
Compiler:          mingw delivered with Qt SDK 4.6.2
OS:                Windows 32-Bit

As the short description says it: when you create a shared axis box and hit "B" in any of the plots, nothing happens.
Calling the RMB->Break shared axis box menu works. Maybe a shortcut collision?
Comment 1 Peter Kümmel 2010-05-27 19:27:41 UTC
SVN commit 1131224 by kuemmel:

create actions with shortcuts on item creation, 
doing this in the context menu event is too late for the shortcuts 
because they could be used before a context menu event.

BUG: 236679

 M  +18 -19    plotitem.cpp  
 M  +5 -0      plotitem.h  
 M  +6 -8      sharedaxisboxitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1131224
Comment 2 Peter Kümmel 2010-08-14 12:14:55 UTC
Change version from 2.0.0_devel to 2.0.0 to simplify version numbering.
Comment 3 Peter Kümmel 2010-11-12 10:42:35 UTC
These bugs are solved with 2.0.0