create actions with shortcuts on item creation, doing this in the context menu event is too late for the shortcuts because they could be used before a context menu event.

BUG: 236679

git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1131224 283d02a7-25f6-0310-bc7c-ecb5cbfe19da